--- a/client/styles.css
+++ b/client/styles.css
@@ -43,4 +43,5 @@ canvas {
   height: calc(var(--toolheight) / 3);
   position: absolute;
   background-color: cadetblue;
+  clip-path: polygon(0 0, 0% 100%, 70% 70%, 0 0);
 }
