--- a/client/styles.css
+++ b/client/styles.css
@@ -118,3 +118,34 @@ canvas {
   display: inline-block;
   width: 115px; /* Consistent width for all line previews */
 }
+
+#fillTool {
+  width: 2rem;
+  height: 2rem;
+  padding: 5px;
+  /* display: flex; */
+  align-items: center;
+  position: relative;
+  margin-left: 20px;
+  background-color: #ffffff;
+  border: 1px solid #000000;
+  cursor: pointer;
+}
+
+#fillTool img {
+  width: 25px;
+  height: 25px;
+}
+
+#fillTool:hover {
+  
+  /* display: flex; */
+  background-color: var(--purple);
+}
+
+#fillTool:active {
+  box-shadow: 0px 0px 1px 1px var(--purple);
+ 
+  background-color: var(--purple);
+  
+}
