--- a/client/styles.css
+++ b/client/styles.css
@@ -14,6 +14,13 @@ body {
   width: 100svw;
 }
 
+.cursor{
+  width:10px;
+  height:10px;
+  background-color:darkgrey;
+  position: absolute;
+}
+
 #toolbar {
   width: 100svw;
   height: var(--toolheight);
@@ -153,6 +160,36 @@ canvas {
 #fillTool:active {
   box-shadow: 0px 0px 1px 1px var(--purple);
  
+  background-color: var(--purple);
+  
+}
+
+#pencil {
+  width: 2rem;
+  height: 2rem;
+  padding: 5px;
+  /* display: flex; */
+  align-items: center;
+  position: relative;
+  margin-left: 20px;
+  background-color: #ffffff;
+  border: 1px solid #000000;
+  cursor: pointer;
+}
+
+#pencil img {
+  width: 25px;
+  height: 25px;
+}
+
+#pencil:hover {
+  
+  /* display: flex; */
+  background-color: var(--purple);
+}
+
+#pencil:active {
+  box-shadow: 0px 0px 1px 1px var(--purple);
   background-color: var(--purple);
   
 }
