--- a/client/styles.css
+++ b/client/styles.css
@@ -46,7 +46,7 @@ body {
 #toolbar {
   width: 100svw;
   height: var(--toolheight);
-  background-color: #363636;
+  background-color: #ddd;
   overflow: visible;
   display: flex;
 }
@@ -55,12 +55,12 @@ body {
   width: 100svw;
   height: calc(100svh - var(--toolheight));
   touch-action: none; /* for screen users */
-  background-color: #363636;
+  background-color: #ddd;
 }
 
 input[type="color"] {
-  width: 3rem;
-  height: 3rem;
+  width: 4rem;
+  height: 4rem;
   margin-top: 1rem;
   margin-left: 0.5rem;
 }
