--- a/client/styles.css
+++ b/client/styles.css
@@ -2,7 +2,8 @@
   color-scheme: light dark;
 
   --toolheight: 6rem;
-  --purple: #ddc6f0;
+  --purple2: #ddc6f0;
+  --purple: #b78fd8;
   --font: "Hack"; /* Hack, "Courier New", Courier, monospace */
   --fontsize: 14px;
 
@@ -35,7 +36,15 @@ body {
   position: absolute;
 }
 
-#ribbon {
+.cursor {
+  height: 10px;
+  width: 10px;
+  background-color: var(--secondary);;
+  position: absolute;
+}
+
+/* Nothing */
+/* #ribbon {
   width: 100svw;
   height: 1.5rem;
   background-color: rgb(67, 46, 148);
@@ -47,8 +56,9 @@ body {
   height: 1.5rem;
   background-color: rgb(147, 59, 59);
   overflow: visible;
-}
+} */
 
+/* main top UI  */
 #toolbar {
   width: 100svw;
   height: var(--toolheight);
@@ -57,6 +67,7 @@ body {
   display: flex;
 }
 
+/* in the name drawing area */
 #drawingarea {
   width: 100svw;
   height: calc(100svh - var(--toolheight));
@@ -65,6 +76,7 @@ body {
    
 }
 
+/* For the color pickers === primary/secondary */
 input[type="color"] {
   width: 4rem;
   height: 4rem;
@@ -77,12 +89,7 @@ canvas {
   image-rendering: crisp-edges;
 }
 
-.cursor {
-  height: 10px;
-  width: 10px;
-  background-color: var(--secondary);;
-  position: absolute;
-}
+
 
 .custom-dropdown {
   position: relative;
@@ -177,8 +184,8 @@ canvas {
 
 #main-tools {
   display: grid;
-  grid-template-columns: repeat(2, 2rem);
-  grid-template-rows: repeat(2, 2rem);
+  grid-template-columns: repeat(2, 1.5rem);
+  grid-template-rows: repeat(3, 1.5rem);
   gap: 0.5rem;
   align-items: center;
   justify-content: center;
@@ -191,45 +198,48 @@ canvas {
 #fillTool,
 #pencil,
 #undo,
-#redo {
-  cursor: pointer;
-
-  width: 2rem;
-  height: 2rem;
-
-  padding: 5px;
+#redo,
+#eraser {
   /* display: flex; */
   align-items: center;
+  justify-content: center;
+  cursor: pointer;
   position: relative;
+
+  width: 1.5rem;
+  height: 1.5rem;
+  padding: 0px;
+  margin-top: 0.2rem;
+  /* margin-right: 0.25em; */
+  margin-left: 0.25em;
 
   background-color: var(--background);
   border:var(--secondary) 2px solid ;
-
-  margin-top: 1rem;
-  margin-right: 0.5em;
-  margin-left: 0.5em;
 }
 #fillTool img,
 #pencil img,
 #undo img,
-#redo img {
-  margin: auto;
-  width: 25px;
-  height: 25px;
+#redo img,
+#eraser img {
+  /* margin: auto; */
+  width: 20px;
+  height: 20px;
 }
 
 #fillTool:hover,
 #pencil:hover,
 #undo:hover,
-#redo:hover {
-  background-color: var(--purple);
+#redo:hover,
+#eraser:hover {
+  background-color: var(--purple2);
 }
 
 #fillTool:active,
 #pencil:active,
 #undo:active,
-#redo:active {
-  box-shadow: 0px 0px 1px 1px var(--purple);
+#redo:active,
+#eraser:active {
+  /* box-shadow: 0px 0px 1px 0.5px var(--purple); */
   background-color: var(--purple);
 }
 
@@ -268,4 +278,9 @@ canvas {
   position: absolute;
   border: var(--secondary) solid 2px;
   cursor: pointer;
+}
+
+#toolbar button.active {
+  background-color: var(--purple);
+  /* box-shadow: 0px 0px 1px 1px var(--purple); */
 }
