--- a/client/styles.css
+++ b/client/styles.css
@@ -46,15 +46,18 @@ body {
   width: 10px;
   height: 10px;
   background-color: var(--secondary);
-  position: absolute;
+  position: fixed;
+  transform: translate(-50%, -50%); /*center cursor*/
   border: 1px black solid;
+  z-index: 500;
+  pointer-events: none;
 
   /*
   top: 0;
   left: 0;
   will-change: transform;
   transition: transform 32ms linear; /* adjust duration as needed */
-  */
+  
 }
 
 /* main top UI  */
@@ -844,12 +847,15 @@ It follows the format of:
 
  z-index/zIndex records: 
   styles.css:
+    .cursor => 500
     #toolbar => 100
     #toolbar-left => 101
     #userList => 90
     .actual-dropdown-list-brushsize-box => 70
     #main-tools => 80
     .colorpalette-condensed .dropdown => 10
+    .adjuster => 2
+    .adjuster.centerBox => 1
 
   cursorManager.js: 
     makeEraserSquare() => 50
@@ -871,7 +877,7 @@ It follows the format of:
 }
 @media (max-width: 391px) {
   #toolbar-left {
-  padding-left: 1rem;
-}
+    padding-left: 1rem;
+  }
   
 }
